# heaps

./: LICENSE  heaps.cabal
.stack-work/install/x86_64-osx/lts-5.1/7.10.3/flag-cache/: QuickCheck-2.8.1-29722fe85bb2c9208f0ea6b42ddef1cc  heaps-0.1.0.0-8fab6ce665ff4b2748aaf691abb2835b  heaps-0.1.0.0-99f7e9c07c1d558e1a41494647f5e0a5  heaps-0.1.0.0-a24ae510f1a34b438e2014993fbee541  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  random-1.1-bddd14dad36e804462e2232164520f8f  tf-random-0.5-25d1329eed590dd8e86f993637cb2c5e  vector-0.11.0.0-324da2b07f25721d305480db94a9f1d6
.stack-work/install/x86_64-osx/lts-5.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/heaps-0.1.0.0-004nESFztNO3dSmVb73cI0/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-5.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/heaps-0.1.0.0-BmUzwjmT2E38EeRn0PtLrY/: Lib.dyn_hi  libHSheaps-0.1.0.0-BmUzwjmT2E38EeRn0PtLrY-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/heaps-0.1.0.0-BmUzwjmT2E38EeRn0PtLrY/Data/: Heap.dyn_hi  Heap.hi  Tree.dyn_hi  Tree.hi
.stack-work/install/x86_64-osx/lts-5.1/7.10.3/lib/x86_64-osx-ghc-7.10.3/heaps-0.1.0.0-D84gs2t4foVLGrEFu7URZk/: libHSheaps-0.1.0.0-D84gs2t4foVLGrEFu7URZk-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-5.1/7.10.3/pkgdb/: heaps-0.1.0.0-61c251cef97ded555e4971241e9261d4.conf  package.cache
src/data/: heap.hs  tree.hs
src/data/heap/: array.hs  braun.hs  leftist.hs
test/: Spec.hs  heap.hs  tests.hs
test/test/: heap.hs
test/test/heap/: braun.hs
(+11 files in other folders)
