name:                heaps
version:             0.1.0.0
synopsis:            A collection of various heap implementations
description:         Please see README.md
homepage:            http://github.com/npj/heaps#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Brindisi
maintainer:          peter.brindisi@gmail.com
copyright:           2016 Peter Brindisi
category:            Data Structures
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Heap
                     , Data.Tree
                     , Data.Heap.Braun
                     , Data.Heap.Leftist
                     , Data.Heap.Array
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

test-suite heaps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heaps
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/npj/heaps
